hphp/test/zend/good/Zend/tests/traits/bugs/missing-trait.php.expectf

Fatal error: Unknown trait 'THello' in %s/missing-trait.php on line 3
